k8's stuffs/project_deployment_templates/Istio-Gateway-API-vs-Istio-Gateway/istio-gateway/6.virtualservices.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: go-route
spec:
  hosts:
  - "*"
  gateways:
  - gateway
  http:
  - match:
    - uri:
        prefix: /api/go
    rewrite:
      uri: /
    route:
    - destination:
        host: go-svc #actual service name
        port:
          number: 5000
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: python-route
spec:
  hosts:
  - "*"
  gateways:
  - gateway
  http:
  - match:
    - uri:
        prefix: /api/python
    rewrite:
      uri: /
    route:
    - destination:
        host: python-svc #actual service name
        port:
          number: 5000
